# live-coding

./: .coverage  .env.template  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  schemas.py
alembic/versions/: 6d90d979366b_first_migration.py
app/: main.py  schemas.py
app/crud/: base.py  language.py  topic.py
app/models/: __init__.py  base.py  language.py  streamer.py  topic.py
app/routers/: languages.py  topics.py
app/tests/: conftest.py  test_crud.py  test_routers.py  test_schemas.py
migrations/: env.py
migrations/versions/: 9d5c24ba9b3c_first_migration.py
models/: __init__.py  base.py  language.py  streamer.py  topic.py
tests/: test_main.py
